sort.basic.comb.AlgCombSort.scala.error
Erreur de compilation :
AlgCombSort:10: error: type mismatch;
 found   : Double
 required: Int
      if( plusPetit(i,i+ecart)){
                    ^AlgCombSort:10: error: type mismatch;
 found   : Double
 required: Int
      if( plusPetit(i,i+ecart)){
                       ^AlgCombSort:11: error: type mismatch;
 found   : Double
 required: Int
        echange(i,i+ecart)
                ^AlgCombSort:11: error: type mismatch;
 found   : Double
 required: Int
        echange(i,i+ecart)
                   ^