sort.basic.comb.AlgCombSort.scala.code
def combSort() {
  var ecart:Double=getNombreValeurs()-1.0
  var c:Int =1
  while (ecart>1 && c==1){
    var c:Int =0
    ecart= ecart/ 1.3
    var i:Double =0.0
    while (i+ecart<getNombreValeurs()){
      if( plusPetit(i,i+ecart)){
        echange(i,i+ecart)
        i+=1
        c=1
      }
    }
  }
}

